change to consul/dockerfile info

--- a/consul/Dockerfile
+++ b/consul/Dockerfile
@@ -1,4 +1,5 @@
 # Meetup: CLT-K8S-001
+# Date: 15/12/09
 # Presenter: Brandon B. Jozsa
 # Purpose: Dockerfile Example
 # Consul Docs: http://www.consul.io/docs/index.html
