--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -5,7 +5,7 @@ FROM ubuntu:14.04
 MAINTAINER Brandon B. Jozsa <bjozsa@jinkit.com>
 
 # Update and Install Prerequisites
-RUN apt-get update && apt-get upgrade -y
+RUN apt-get update && apt-get --yes upgrade --force-yes
 
 # Get in, get out
 CMD ["/bin/bash"]
