--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -5,7 +5,9 @@ FROM ubuntu:14.04
 MAINTAINER Brandon B. Jozsa <bjozsa@jinkit.com>
 
 # Update and Install Prerequisites
-RUN apt-get update && apt-get --yes upgrade --force-yes
+RUN apt-get --quiet update && \
+    apt-get --quiet --yes --force-yes dist-upgrade && \
+		apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Get in, get out
 CMD ["/bin/bash"]
