--- a/observium/Dockerfile
+++ b/observium/Dockerfile
@@ -7,7 +7,7 @@ MAINTAINER Brandon B. Jozsa <bjozsa@jinkit.com>
 
 RUN apt-get --quiet update && \
     apt-get --quiet upgrade -y && \
-    apt-get --quiet install -y libapache2-mod-php5 php5-cli php5-mysql php5-gd php5-snmp php-pear snmp graphviz php5-mcrypt php5-json subversion mysql-server mysql-client rrdtool fping imagemagick whois mtr-tiny nmap ipmitool python-mysqldb wget \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y libapache2-mod-php5 php5-cli php5-mysql php5-gd php5-snmp php-pear snmp graphviz php5-mcrypt php5-json subversion mysql-server mysql-client rrdtool fping imagemagick whois mtr-tiny nmap ipmitool python-mysqldb wget \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN mkdir -p /opt/observium
