updated maltrail and set entrypoint

--- a/maltrail/Dockerfile
+++ b/maltrail/Dockerfile
@@ -3,6 +3,8 @@
 # Presenter: Brandon B. Jozsa
 # Purpose: Dockerfile Example
 # Maltrail Malware Detection Docs: https://github.com/stamparm/maltrail
+# Run the container:
+# docker run -d -v /path/to/configdir:/maltrail -v /path/to/logdir:/var/log/maltrail -p 8338:8338 quay.io/v1k0d3n/maltrail
 FROM quay.io/v1k0d3n/ubuntu-vivid:latest
 MAINTAINER Brandon B. Jozsa <bjozsa@jinkit.com>
 
@@ -20,8 +22,12 @@ RUN git clone https://github.com/stamparm/maltrail.git && \
 
 WORKDIR /maltrail
 
-# Run the Sensor
-RUN python sensor.py > /var/log/maltrail/sensor.log &
+# Add commands to /maltrail/start.sh
+RUN ECHO "/usr/bin/python sensor.py > /var/log/maltrail/sensor.log &" > /maltrail/start.sh
+RUN ECHO "/usr/bin/python server.py > /var/log/maltrail/server.log &" >> /maltrail/start.sh
 
-# Run the Server (Port 8338)
-RUN python server.py > /var/log/maltrail/server.log &
+# Add exposed ports
+EXPOSE 8338
+
+# Set the entrypoint for the container
+ENTRYPOINT [/maltrail/start.sh]
