resolving some build errors...

--- a/fed-dev/Dockerfile
+++ b/fed-dev/Dockerfile
@@ -8,7 +8,7 @@ MAINTAINER Brandon B. Jozsa <bjozsa@jinkit.com>
 
 # Update, Upgrade and Install Prerequisites
 RUN dnf update -y \
-    && dnf install -y unzip tar git ansible python-devel python-netaddr python-openstackclient 
+    && dnf install -y unzip tar git ansible python-devel python-netaddr python-openstackclient python-troveclient python-heatclient
 
 # Download Vagrant: Only used for "vagrant up --provider='n' situations(n=openstack or other remote host)"
 # Unfortunately, Hashicorp will require us to manually update our container, because there is no "vagrant.zip"
@@ -25,6 +25,3 @@ RUN curl -O https://releases.hashicorp.com/terraform/0.6.8/terraform_0.6.8_linux
 
 # Now move them...so we can use them
 RUN unzip terraform_0.6.8_linux_amd64.zip -d /usr/bin/ && unzip packer_0.8.6_linux_amd64.zip -d /usr/bin/
-
-# Set the entrypoint to be a simple agent.
-ENTRYPOINT ["/bin/bash"]
