cent-dev updates

--- a/cent-dev/Dockerfile
+++ b/cent-dev/Dockerfile
@@ -3,28 +3,48 @@
 # Presenter: Brandon B. Jozsa
 # Purpose: Dockerfile Example
 # Consul Docs: http://www.consul.io/docs/index.html
-FROM centos:latest
+FROM   centos:7
 MAINTAINER Brandon B. Jozsa <bjozsa@jinkit.com>
 
+ARG   ARCH="amd64"
+ARG   VERSION_TERRAFORM="0.6.8"
+ARG   VERSION_PACKER="0.8.6"
+ARG   VERSION_VAGRANT="1.8.1"
+
 # Update, Upgrade and Install Prerequisites
-RUN yum update -y \
-    && yum install -y unzip tar git ansible python-devel python-netaddr python-openstackclient python-troveclient python-heatclient
+RUN   yum update -y ;\
+      yum install -y \
+      unzip \
+      tar \
+      git \
+      ansible \
+      python-devel \
+      python-netaddr \
+      python-openstackclient \
+      python-troveclient \
+      python-heatclient ;\
+      yum clean all ;\
+      rm -rf /var/cache/yum
 
 # Download Vagrant: Only used for "vagrant up --provider='n' situations(n=openstack or other remote host)"
 # Unfortunately, Hashicorp will require us to manually update our container, because there is no "vagrant.zip"
 #   for the "latest" Vagrant packages.
-RUN yum install -y https://releases.hashicorp.com/vagrant/1.8.1/vagrant_1.8.1_x86_64.rpm && yum clean all
+RUN   yum install -y https://releases.hashicorp.com/vagrant/${VERSION_VAGRANT}/vagrant_${VERSION_VAGRANT}_x86_64.rpm ;\
+      yum clean all ;\
+      rm -rf /var/cache/yum
 
 # Add some working directories
-RUN mkdir -p /home/development
+RUN   mkdir -p /home/development
 WORKDIR /home/development
 
 # Download other hashicorp tools
-RUN curl -O https://releases.hashicorp.com/terraform/0.6.8/terraform_0.6.8_linux_amd64.zip && \
-    curl -O https://releases.hashicorp.com/packer/0.8.6/packer_0.8.6_linux_amd64.zip
+RUN curl -O https://releases.hashicorp.com/terraform/${VERSION_TERRAFORM}/terraform_${VERSION_TERRAFORM}_linux_${ARCH}.zip ;\
+    curl -O https://releases.hashicorp.com/packer/${VERSION_PACKER}/packer_${VERSION_PACKER}_linux_${ARCH}.zip
 
 # Now move them...so we can use them
-RUN unzip terraform_0.6.8_linux_amd64.zip -d /usr/bin/ && unzip packer_0.8.6_linux_amd64.zip -d /usr/bin/
+RUN   unzip terraform_${VERSION_TERRAFORM}_linux_${ARCH}.zip -d /usr/bin/ ;\
+      unzip packer_${VERSION_PACKER}_linux_${ARCH}.zip -d /usr/bin/
 
 # Cleanup
-RUN rm -rf packer_0.8.6_linux_amd64.zip terraform_0.6.8_linux_amd64.zip
+RUN   rm -rf terraform_${VERSION_TERRAFORM}_linux_${ARCH}.zip \
+      packer_${VERSION_PACKER}_linux_${ARCH}.zip
