consul: repairing image build. more work soon.

--- a/consul/Dockerfile
+++ b/consul/Dockerfile
@@ -3,32 +3,33 @@
 # Presenter: Brandon B. Jozsa
 # Purpose: Dockerfile Example
 # Consul Docs: http://www.consul.io/docs/index.html
-FROM quay.io/v1k0d3n/ubuntu-vivid:latest
+FROM ubuntu:16.04
 MAINTAINER Brandon B. Jozsa <bjozsa@jinkit.com>
+
+ARG  ARCH="amd64"
+ARG  VERSION_CONSUL="0.6.0"
 
 # Update, Upgrade and Install Prerequisites
 RUN apt-get --quiet update && \
     apt-get --quiet upgrade -y && \
     apt-get update && apt-get install -y \
       unzip \
+      curl \
       && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Download Consul/Web-UI
-ADD https://releases.hashicorp.com/consul/0.6.0/consul_0.6.0_linux_amd64.zip /tmp/consul.zip
-ADD https://releases.hashicorp.com/consul/0.6.0/consul_0.6.0_web_ui.zip /tmp/web_ui.zip
+RUN curl -o consul_${VERSION_CONSUL}_linux_${ARCH}.zip https://releases.hashicorp.com/consul/${VERSION_CONSUL}/consul_${VERSION_CONSUL}_linux_${ARCH}.zip ;\
+    unzip consul_${VERSION_CONSUL}_linux_${ARCH}.zip -d /usr/local/bin/ ;\
+    rm -rf consul_${VERSION_CONSUL}_linux_${ARCH}.zip
 
 # Add Consul Data Directory
-RUN mkdir -p /opt/consul/data
-
-# Install the consul agent and web ui.
-RUN unzip /tmp/consul.zip -d /opt/consul/bin/
-RUN unzip /tmp/web_ui.zip -d /opt/consul/web_ui/
-RUN chmod +x /opt/consul/bin/consul
+RUN mkdir -p /opt/consul/data ;\
+    mkdir -p /opt/consul/ui
 
 # Expose the service ports:
 # Port Info: https://consul.io/docs/agent/options.html#ports
 EXPOSE 8300 8301 8302 8400 8500 8600/udp
 
 # Set the entrypoint to be a simple agent.
-ENTRYPOINT ["/opt/consul/bin/consul", "agent", "-data-dir", "/opt/consul/data"]
+ENTRYPOINT ["/usr/local/bin/consul", "agent", "-data-dir", "/opt/consul/data", "-ui-dir=/opt/consul/ui/"]
