--- a/kubernetes-bin/Dockerfile
+++ b/kubernetes-bin/Dockerfile
@@ -20,27 +20,27 @@ ENV VERSION_KUBERNETES=$VERSION_KUBERNETES
 RUN  apk update ;\
      apk add --no-cache \
      curl ;\
-     mkdir -p /opt/kubernetes/bin/ ;\
-     mkdir -p /tmp/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/kube/
+     mkdir -p /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/bin/ ;\
+     mkdir -p /tmp/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}
 
 # Set .vars from ARGS for potential orchestration use later:
-RUN  set | grep ARCH > /opt/kubernetes/VERSION ;\
-     set | grep TYPE >> /opt/kubernetes/VERSION ;\
-     set | grep MODE >> /opt/kubernetes/VERSION ;\
-     set | grep VERSION_KUBERNETES >> /opt/kubernetes/VERSION
+RUN  set | grep ARCH > /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/VERSION ;\
+     set | grep TYPE >> /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/VERSION ;\
+     set | grep MODE >> /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/VERSION ;\
+     set | grep VERSION_KUBERNETES >> /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/VERSION
 
 # Single line may help when rebuilding locally:
 RUN  curl -L https://storage.googleapis.com/kubernetes-release/release/${VERSION_KUBERNETES}/kubernetes-${MODE}-${TYPE}-${ARCH}.tar.gz -o /tmp/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}.tgz
 
 RUN  cd /tmp/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/ ;\
      tar --strip-components=1 -zxvf ${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}.tgz ;\
-     mv /tmp/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/${MODE}/bin/* /opt/kubernetes/bin/ ;\
-     rm -rf /opt/kubernetes/bin/*.docker_tag \
-       /opt/kubernetes/bin/*.tar \
+     mv /tmp/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/${MODE}/bin/* /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/bin/ ;\
+     rm -rf /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/bin/*.docker_tag \
+       /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/bin/*.tar \
        /tmp/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}
 
-ENV  PATH=/opt/kubernetes/bin:$PATH
+ENV  PATH=/usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/bin:$PATH
 
-WORKDIR  /opt/kubernetes/bin/
+WORKDIR  /usr/local/share/${VERSION_KUBERNETES}-${ARCH}-${TYPE}-kubernetes-${MODE}/bin/
 
 CMD [ "kubectl", "version" ]
