cfssl: refinement and more grainular control of CN=user

--- a/cfssl-kubernetes/Dockerfile
+++ b/cfssl-kubernetes/Dockerfile
@@ -7,7 +7,7 @@ ARG  CFSSL_INPUT="/usr/local/share/cfssl/input"
 ARG  CFSSL_OUTPUT="/usr/local/share/cfssl/output"
 ARG  CFSSL_PKI="/pki"
 ARG  CFSSL_EXP="8760h"
-ARG  CFSSL_CN="Kubernetes"
+ARG  CFSSL_CN="admin"
 ARG  CFSSL_ALGO="rsa"
 ARG  CFSSL_SIZE="2048"
 ARG  CFSSL_COUNTRY="US"
